--- a/.github/workflows/judge-build.yml
+++ b/.github/workflows/judge-build.yml
@@ -18,13 +18,13 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: zikanwari
+        username: omzh-scitechs
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: meta
       id: meta
       uses: docker/metadata-action@v3
       with:
-          images: ghcr.io/OMZH-ScITechS/MaiCoder
+          images: ghcr.io/omzh-scitechs/maicoder
     # 5. setup buildx
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -35,7 +35,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: api
+        context: judge
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/OMZH-ScITechS/MaiCoder:judge
+        tags: ghcr.io/omzh-scitechs/maicoder:judge
