--- a/web/problem/Dockerfile
+++ b/web/problem/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY judge.py .
+COPY web-problem.py .
 
-CMD ["uvicorn", "judge:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "web-problem:app", "--host", "0.0.0.0", "--port", "80"]
