--- a/.github/workflows/api-build.yml
+++ b/.github/workflows/api-build.yml
@@ -1,10 +1,10 @@
-name: JUDGE CI
+name: API CI
 
 on:
   workflow_dispatch:
   push:
     paths:
-      - 'judge/**'
+      - 'api/**'
 
 jobs:
   main:
@@ -35,7 +35,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: judge
+        context: api
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/omzh-scitechs/maicoder:judge
+        tags: ghcr.io/omzh-scitechs/maicoder:api
