--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,5 +6,6 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY api.py .
+COPY problems/ .
 
 CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "80"]
