--- a/.github/workflows/web-template-build.yml
+++ b/.github/workflows/web-template-build.yml
@@ -35,7 +35,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: web
+        context: web/template
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ghcr.io/omzh-scitechs/maicoder:web-template
