--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/web/html/index.html"
+    "livePreview.defaultPreviewPath": "/web/html/contest-editor.html"
 }
