--- a/.github/workflows/api-build.yml
+++ b/.github/workflows/api-build.yml
@@ -24,7 +24,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v3
       with:
-          images: ghcr.io/omzh-scitechs/maicoder
+          images: ghcr.io/omzh-scitechs/maicoder-api
     # 5. setup buildx
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -38,4 +38,4 @@ jobs:
         context: api
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/omzh-scitechs/maicoder:api
+        tags: ghcr.io/omzh-scitechs/maicoder-api:${{ steps.meta.outputs.tags }}
