--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -25,7 +25,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v3
       with:
-          images: ghcr.io/omzh-scitechs/maicoder
+          images: ghcr.io/omzh-scitechs/maicoder-web
     # 5. setup buildx
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -39,4 +39,4 @@ jobs:
         context: web
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/omzh-scitechs/maicoder:web
+        tags: ghcr.io/omzh-scitechs/maicoder-web:${{ steps.meta.outputs.tags }}
