--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -39,4 +39,4 @@ jobs:
         context: web
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/omzh-scitechs/maicoder-web:${{ steps.meta.outputs.tags }}
+        tags: ghcr.io/omzh-scitechs/maicoder-web:latest
