--- a/.github/workflows/api-build.yml
+++ b/.github/workflows/api-build.yml
@@ -25,6 +25,10 @@ jobs:
       uses: docker/metadata-action@v3
       with:
           images: ghcr.io/omzh-scitechs/maicoder-api
+          tags: |
+            type=sha
+            type=ref,event=branch
+            type=ref,event=tag
     # 5. setup buildx
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -38,4 +42,4 @@ jobs:
         context: api
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/omzh-scitechs/maicoder-api:latest
+        tags: ${{ steps.meta.outputs.tags }}
