--- a/.github/workflows/web-template-build.yml
+++ b/.github/workflows/web-template-build.yml
@@ -25,6 +25,8 @@ jobs:
       uses: docker/metadata-action@v3
       with:
           images: ghcr.io/omzh-scitechs/maicoder-web-template
+          tags: |
+            type=sha
     # 5. setup buildx
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -38,4 +40,4 @@ jobs:
         context: web/template
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/omzh-scitechs/maicoder-web-template:latest
+        tags: ${{ steps.meta.outputs.tags }}
